fixed white right gap

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,10 @@ header {
     padding: 20px 40px;
     color: #000;
     position: absolute;
-    width: 100%;
+
     top: 0;
     z-index: 10;
+    width: 100%;
 }
 
 header .logo img {
@@ -82,6 +83,7 @@ header nav ul li:hover .dropdown-content {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .hero-image {
@@ -120,6 +122,7 @@ header nav ul li:hover .dropdown-content {
 /* Programs Section Styles */
 .programs {
     background-color: #000;
+    width: 100%;
     padding: 50px 20px;
     text-align: center;
 }
